final positioning of expansion page

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <div class="column1">
       <img src="./images/flower-closeup.jpg" id="flower" alt="Flower closeup"/>
         <div class="expandBelow">
-          <h2 class="sub-heading" id="landscapes">Types of Landscapes</h2>
+          <h2 class="sub-heading" id="landscapes">Types of Landscapes we offer:</h2>
             <ol id="list1">
               <li>Paving</li>
               <li>Lawn Mowing</li>
               <li>Building Ponds</li>
               <li>Decking</li>
-              <li>Building Sheds</li>
+              <li>Shed Building</li>
             </ol>
         </div>
     <blockquote>
@@ -64,15 +64,16 @@
           <li>Lawn Mowing</li>
           <li>Building Ponds</li>
           <li>Decking</li>
-          <li>Building Sheds</li>
+          <li>Shed Building</li>
+          <li>Tree Cutting</li>
+          <li>Rockeries</li>
         </ol>
-        <button>Contact Us</button>
+        <a href="#"><button id="contact1">Contact Us</button></a>
       </div>
 
-      <img src="./images/rockerie.png" alt="Rockerie" />
+      <img src="./images/rockerie.png" id="rockerie" alt="Rockerie" />
 
-      <img src="./images/water-feature.jpg" />
-      <button>Contact Us</button>
+      <img src="./images/water-feature.jpg" id="water-feature" alt="Water Feature" />
     </div>
   </section>
 
