expansion section layout completed

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       <img src="./images/rockerie.png" id="rockerie" alt="Rockerie" />
 
       <img src="./images/water-feature.jpg" id="water-feature" alt="Water Feature" />
+      <p id="covered-areas">Our work covers most areas in the Midlands</p>
     </div>
   </section>
 
