home pages images changed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <section>
     <div class="column1">
-      <img src="./images/flower-closeup.jpg" id="flower" alt="Flower closeup"/>
+      <img src="./images/decking.jpg" id="decking" alt="Decking"/>
         <div class="expandBelow">
           <h2 class="sub-heading" id="landscapes">Types of Landscapes we offer:</h2>
             <ol id="list1">
@@ -73,7 +73,7 @@
 
       <img src="./images/rockerie.png" id="rockerie" alt="Rockerie" />
 
-      <img src="./images/water-feature.jpg" id="water-feature" alt="Water Feature" />
+      <img src="./images/worker.jpg" id="worker" alt="At Work" />
       <p id="covered-areas">Our work covers most areas in the Midlands</p>
     </div>
   </section>
