--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
       <p id="footer-company">A&H Landscapes</p><br />
       <p class="contact-details">01604-406549</p>
       <p class="contact-details" id="email-info">enquiries@ahlandscapes.com</p><br />
-      <p id="design-info">Design by DX2> &copy 2017</p>
+      <p id="design-info">Design by DX2 &copy 2017</p>
     </div>
 
     <img src="images/grass-banner.jpg" alt="Grass Banner"/>
