--- a/gallery.html
+++ b/gallery.html
@@ -55,20 +55,45 @@
       <p class="page-headings">Gallery</p>
     </div>
       <p class="sub-headings" id="example">Examples of some of our work: </p>
-      <div class="rev_slider_wrapper">
+      <div class="rev_slider_wrapper fullscreen-container">
 
         <!-- the ID here will be used in the inline JavaScript below to initialize the slider -->
-        <div id="rev_slider_1" class="rev_slider" style="display:none">
+        <div id="rev_slider_1" class="rev_slider fullscreenbanner" style="display:none">
           <ul>
             <!-- MINIMUM SLIDE STRUCTURE -->
             <li data-transition="fade">
               <!-- SLIDE'S MAIN BACKGROUND IMAGE -->
-              <img src="assets/images/notgeneric_bg3.jpg" alt="Sky" class="rev-slidebg">
+              <img src="images/landscape1.jpg" alt="" class="rev-slidebg">
             </li>
             <!-- MINIMUM SLIDE STRUCTURE -->
             <li data-transition="fade">
               <!-- SLIDE'S MAIN BACKGROUND IMAGE -->
-              <img src="assets/images/notgeneric_bg5.jpg" alt="Ocean" class="rev-slidebg">
+              <img src="images/landscape2.jpg" alt="" class="rev-slidebg">
+            </li>
+            <!-- MINIMUM SLIDE STRUCTURE -->
+            <li data-transition="fade">
+              <!-- SLIDE'S MAIN BACKGROUND IMAGE -->
+              <img src="images/landscape3.jpg" alt="" class="rev-slidebg">
+            </li>
+            <!-- MINIMUM SLIDE STRUCTURE -->
+            <li data-transition="fade">
+              <!-- SLIDE'S MAIN BACKGROUND IMAGE -->
+              <img src="images/landscape4.jpg" alt="" class="rev-slidebg">
+            </li>
+            <!-- MINIMUM SLIDE STRUCTURE -->
+            <li data-transition="fade">
+              <!-- SLIDE'S MAIN BACKGROUND IMAGE -->
+              <img src="images/landscape5.jpg" alt="" class="rev-slidebg">
+            </li>
+            <!-- MINIMUM SLIDE STRUCTURE -->
+            <li data-transition="fade">
+              <!-- SLIDE'S MAIN BACKGROUND IMAGE -->
+              <img src="images/landscape6.jpg" alt="" class="rev-slidebg">
+            </li>
+            <!-- MINIMUM SLIDE STRUCTURE -->
+            <li data-transition="fade">
+              <!-- SLIDE'S MAIN BACKGROUND IMAGE -->
+              <img src="images/landscape7.jpg" alt="" class="rev-slidebg">
             </li>
           </ul>
         </div>
