updating text on about & home page

--- a/about.html
+++ b/about.html
@@ -31,34 +31,33 @@
         <div class="wrapper">
           <div id="about-intro">
             <p class="sub-headings">Locally Owned and Family Operated</p><br />
-            <p id="family-operated">Lorizzle ipsum dolizzle sizzle amizzle, bow wow wow adipiscing ass. Nullam nizzle velizzle, fo shizzle mah nizzle fo rizzle,
-              mah home g-dizzle volutpat, suscipit quizzle, fo shizzle vizzle, dang. Pellentesque doggy tortizzle. Fo shizzle mah nizzle fo
-              rizzle, mah home g-dizzle erizzle. Fo shizzle at dolor go to hizzle things tempizzle my shizz. Maurizzle fo nibh bling bling
-              turpizzle. Vestibulum in tortor. Pellentesque break yo neck, yall rhoncus nisi. In yo mamma get down get down check out this
-              dictumst. In yo mamma get down get down check out this dictumst. Donec dapibizzle. Curabitur check it out fizzle, mammasay
-              mammasa mamma oo sa i saw beyonces tizzles and my pizzle went crizzle, sizzle ac, eleifend vitae, nunc. Daahng dawg suscipizzle.
-              Fo shizzle sempizzle boom shackalack sizzle check out this.</p>
+            <p id="family-operated">A&H Landscapes is a family run business which started out in 2002. Nathan and Paul Streetly
+            created the company as a father / son business, but as the company has progressed it now employs over 12 employee's.
+            Pretty much every type of landscaping job you can think of has been worked on over the companies duration. We're really
+            proud with how far the company has come since we started. The company is based in Northampton but we cover all the Midlands
+            area. If it's a large landscaping project we are open to it nationally, feel free to enquire! We've been fortuate to have some really
+            talented staff over the years, a special thanks to their hard work and dedication on behalf of the company.</p>
           </div><br  />
           <hr />
           <div id="offer-clients">
             <p class="sub-headings">We offer our clients...</p><br />
-            <ul id="offer-list">
-              <li>1 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
-              <li>2 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
-              <li>3 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
-              <li>4 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
-              <li>5 - Doggy rizzle tortor izzle shiznit ultricizzle consequat. In bling bling, arcu dizzle dignissizzle posuere.</li><br />
-            </ul>
+            <ol id="offer-list">
+              <li>1 - 100% commitment to customer satisfaction</li><br />
+              <li>2 - Will always strive to add that bit extra to any job we do</li><br />
+              <li>3 - We cover all areas of landscaping</li><br />
+              <li>4 - We specialise in water features and decking projects</li><br />
+              <li>5 - Consistently been in the top 5 landscaping companies in Midlands area in the last 10 years</li><br />
+            </ol>
           </div><br />
           <hr />
           <div id="thankyou">
               <p class="sub-headings">Thanks To Our Customers</p><br />
-                <p id="thank-customers">Daahng dawg laoreet uhuh ... yih! break yo neck, yall get down get down. Brizzle quizzle arcu. Maecenizzle shiz,
-                  ipsizzle malesuada malesuada scelerisque, nulla shiznit euismizzle go to hizzle, izzle luctizzle metizzle nulla et yippiyo.
-                  Vivamizzle ullamcorper, izzle i saw beyonces tizzles and my pizzle went crizzle varius ass, nibh owned gangster check it out,
-                  izzle you son of a bizzle leo elit in dolor. Check it out tellivizzle, orci vel volutpat consectetuer, sem own yo' shit nisi,
-                  izzle bibendum enim ass ut dang. Nullizzle a velit fo shizzle mah nizzle fo rizzle, mah home g-dizzle break it down tellivizzle
-                  viverra.</p>
+                <p id="thank-customers">We would like to say a huge thank you to all our customers, putting their faith
+                in us in the jobs we've done. It has been a pleasure to work on the projects we've done and go beyond
+                people's expectations! It's always very gratifying for us to transform a garden that we are really proud of and
+                pleases our customers. We would also like to mention a special thanks to some of our suppliers, without them
+                we wouldn't have some of the materials, tools and machines that help us greatly to achieve the best
+                project results!</p>
                   <img src="images/family-business-pic.jpg" id="family-pic" />
           </div>
         </div>
