--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
               <li>Building Ponds</li>
               <li>Decking</li>
               <li>Shed Building</li>
+              <li>Rockeries</li>
+              <li>Tree Cutting</li>
+              <li>Fencing</li>
+              <li>Bricklaying</li>
             </ol>
         </div>
     <blockquote>
@@ -60,13 +64,11 @@
       <div class="expandTop">
         <h2 class="sub-heading" id="services">Our Services</h2>
         <ol id="list2">
-          <li>Paving</li>
-          <li>Lawn Mowing</li>
-          <li>Building Ponds</li>
-          <li>Decking</li>
-          <li>Shed Building</li>
-          <li>Tree Cutting</li>
-          <li>Rockeries</li>
+          <li>Creating, transforming gardens</li>
+          <li>Building water features</li>
+          <li>Creating plant gardens</li>
+          <li>Work in home gardens</li>
+          <li>Work in stately home gardens</li>
         </ol>
         <a href="#"><button id="contact1">Contact Us</button></a>
       </div>
