jquery quotes being added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,19 @@
             </ol>
         </div>
     <blockquote>
-      "An impressive quote made by a customer of A&H Landscapes"
+      "I've used A&H Landscapes on a few projects and couldn't
+      recommend them enough! The completion of projects has been
+      on time and to a fantastic standard!"
+    </blockquote>
+    <blockquote>
+      "I had a specific requirement for a shed project in my garden.
+      Couldn't have asked for a better service than A&H Landscapes,
+      really happy we've how it turned out, above my expectations!"
+    </blockquote>
+    <blockquote>
+      "Really pleased with the decking project we had done in our back
+      garden! Couldn't fault the craftmansship of the work A&H Landscapes
+      have done for us!"
     </blockquote>
     </div>
 
