home page padding positioning

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="column1">
       <img src="./images/decking.jpg" id="decking" alt="Decking"/>
         <div class="expandBelow">
-          <h2 class="sub-heading" id="landscapes">Types of Landscapes we offer:</h2>
+          <h2 class="sub-heading" id="landscapes">Types of Landscapes</h2>
             <ol id="list1">
               <li>Paving</li>
               <li>Lawn Mowing</li>
@@ -55,20 +55,21 @@
               <li>Bricklaying</li>
             </ol>
         </div>
+      <img src="./images/end-quotes.png" alt="Quote Speech Mark" id="quote-end"/>
       <blockquote>
-        "I've used A&H Landscapes on a few projects and couldn't
+        I've used A&H Landscapes on a few projects and couldn't
         recommend them enough! The completion of projects has been
-        on time and to a fantastic standard!"
+        on time and to a fantastic standard!
       </blockquote>
       <blockquote>
-        "I had a specific requirement for a shed project in my garden.
+        I had a specific requirement for a shed project in my garden.
         Couldn't have asked for a better service than A&H Landscapes,
-        really happy we've how it turned out, above my expectations!"
+        really happy we've how it turned out, above my expectations!
       </blockquote>
       <blockquote>
-        "Really pleased with the decking project we had done in our back
+        Really pleased with the decking project we had done in our back
         garden! Couldn't fault the craftmansship of the work A&H Landscapes
-        have done for us!"
+        have done for us!
       </blockquote>
     </div>
 
@@ -79,8 +80,8 @@
           <li>Creating, transforming gardens</li>
           <li>Building water features</li>
           <li>Creating plant gardens</li>
-          <li>Work in home gardens</li>
-          <li>Work in stately home gardens</li>
+          <li>Home gardens</li>
+          <li>Stately Home gardens</li>
         </ol>
         <a href="#"><button id="contact1">Contact Us</button></a>
       </div>
