home page midlands area added

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
       <img src="./images/rockerie.png" id="rockerie" alt="Rockerie" />
 
       <img src="./images/worker.jpg" id="worker" alt="At Work" />
-      <p id="covered-areas">Our work covers most areas in the Midlands</p>
+      <div id="covered-opacity"></div>
+      <p id="covered-txt">We cover all the Midlands area</p>
     </div>
   </section>
 
