about page image & positioning changes

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
               <li>2 - Will always strive to add that bit extra to any job we do</li><br />
               <li>3 - We cover all areas of landscaping</li><br />
               <li>4 - We specialise in water features and decking projects</li><br />
-              <li>5 - Consistently been in the top 5 landscaping companies in Midlands area in the last 10 years</li><br />
+              <li>5 - Consistently been in the top 5 landscaping companies in the Midlands area in the last 10 years</li><br />
             </ol>
           </div><br />
           <hr />
@@ -58,7 +58,7 @@
                 pleases our customers. We would also like to mention a special thanks to some of our suppliers, without them
                 we wouldn't have some of the materials, tools and machines that help us greatly to achieve the best
                 project results!</p>
-                  <img src="images/family-business-pic.jpg" id="family-pic" />
+                  <img src="images/gardeners.jpg" id="family-pic" />
           </div>
         </div>
   </main>
