--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <li>Home gardens</li>
           <li>Stately Home gardens</li>
         </ol>
-        <a href="#"><button id="contact1">Contact Us</button></a>
+        <a href="contact.html" id="contact1">Contact Us</a>
       </div>
 
       <img src="./images/rockerie.png" id="rockerie" alt="Rockerie" />
