adding content to bottom fixed header on homepage

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     </div>
   </main>
     <div class="bottomPage-banner">
-      <!--content to add -->
+      <p id="phone-no">Phone: 01604-409834</p>
+      <p id="email-head">Email: enquiries@ahlandscapes.com</p>
     </div>
 
   <!-- Expansion of page -->
