about page responsive done

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                 pleases our customers. We would also like to mention a special thanks to some of our suppliers, without them
                 we wouldn't have some of the materials, tools and machines that help us greatly to achieve the best
                 project results!</p>
-                  <img src="images/gardeners.jpg" id="family-pic" />
+                  <img src="images/gardeners.jpg" id="gardeners" />
           </div>
         </div>
   </main>
