Gallery page - responsive done

--- a/contact.html
+++ b/contact.html
@@ -50,16 +50,16 @@
           <div class="user-contact-form">
               <div class="input-personal">
                 <p class="sub-headings">Your Name:</p>
-                <input type="text" placeholder="Full Name" />
+                <input class="user-info" type="text" placeholder="Full Name" />
                 <p class="sub-headings">Your Email:</p>
-                <input type="text" />
+                <input class="user-info" type="text" />
                 <p class="sub-headings">Your Phone:</p>
                 <input type="number" />
               </div>
 
               <div class="input-questions">
                 <p class="sub-headings">Questions:</p>
-                <textarea rows="12" cols="53">
+                <textarea id="questions" rows="12" cols="53">
 
                 </textarea>
                   <div>
