Contact page responsive done

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                 <p class="sub-headings">Your Email:</p>
                 <input class="user-info" type="text" />
                 <p class="sub-headings">Your Phone:</p>
-                <input type="number" />
+                <input id="phone-info" type="number" />
               </div>
 
               <div class="input-questions">
