contact button created

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <li>Home gardens</li>
           <li>Stately Home gardens</li>
         </ol>
-        <a href="contact.html" id="contact1">Contact Us</a>
+        <a href="contact.html" target="_parent"><button class="btn btn-1 btn-1c">Contact Us</button></a>
       </div>
 
       <img src="./images/rockerie.png" id="rockerie" alt="Rockerie" />
