gallery page - responsive menu JS added

--- a/gallery.html
+++ b/gallery.html
@@ -111,6 +111,7 @@
     <img src="images/grass-banner.jpg" alt="Grass Banner" />
   </footer>
 
+  <script src="js/index.js"></script>
   <script src="js/gallery.js"></script>
 </body>
 
